2014-10-14  Alexey Proskuryakov  <ap@apple.com>

        REGRESSION (r165356): Issues with Japanese text input
        https://bugs.webkit.org/show_bug.cgi?id=137719
        rdar://problem/18431952
        rdar://problem/18483741

        Reviewed by Darin Adler.

        * WebProcess/WebPage/WebPage.cpp: (WebKit::WebPage::didChangeSelection):
        In sync code path, ensure consistent message delivery order by adding
        a DispatchMessageEvenWhenWaitingForSyncReply flag. This way, delayed
        EditorStateChanged messages won't confuse UI process.

2014-10-20  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Remove the factory method from DragAndDropHandler
        https://bugs.webkit.org/show_bug.cgi?id=137872

        Reviewed by Sergio Villar Senin.

        Make the constructor public and use std::make_unique instead.

        * UIProcess/API/gtk/WebKitWebViewBase.cpp:
        (webkitWebViewBaseDragAndDropHandler):
        * UIProcess/gtk/DragAndDropHandler.cpp:
        (WebKit::DragAndDropHandler::create): Deleted.
        * UIProcess/gtk/DragAndDropHandler.h:

2014-10-19  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Move GtkDragAndDropHelper from Platform to WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=137422

        Reviewed by Martin Robinson.

        WebKitWebViewBase is currently the only user of
        GtkDragAndDropHelper, that was added to share the code with
        WebKit1. Move all the drag and drop logic to a new class
        DragAndDropHandler.

        * PlatformGTK.cmake: Add new files to compilation.
        * UIProcess/API/gtk/PageClientImpl.cpp:
        (WebKit::PageClientImpl::startDrag):
        * UIProcess/API/gtk/WebKitWebViewBase.cpp:
        (webkitWebViewBaseConstructed):
        (webkitWebViewBaseDragDataGet):
        (webkitWebViewBaseDragEnd):
        (webkitWebViewBaseDragDataReceived):
        (webkitWebViewBaseDragMotion):
        (webkitWebViewBaseDragLeave):